--- a/HTML CSS 실습/레이아웃 만들기 display_inline.html
+++ b/HTML CSS 실습/레이아웃 만들기 display_inline.html
@@ -2,22 +2,21 @@
 <htlm>
     
     <head>
-        <link rel="stylesheet" href="레이아웃 만들기 display_inline.css">
+        <link rel="stylesheet" href="레이아웃 만들기 float.css">
 
     </head>
     <body>
+        <!--
+            float : none
+        -->
         <div class="container">
             <div class="top">
-                <p>chicken</p>
             </div>
             <div class="left">
-                <p>chicken</p>
             </div>
             <div class="right">
-                <p>chicken</p>
             </div>
             <div class="bottom">
-                <p>chicken</p>
             </div>
         </div> 
     </body>
