Update 폰트를 꾸며주는 CSS 속성들.html

--- a/HTML CSS 실습/폰트를 꾸며주는 CSS 속성들.html
+++ b/HTML CSS 실습/폰트를 꾸며주는 CSS 속성들.html
@@ -2,7 +2,7 @@
 <htlm>
     
     <head>
-        <link rel="stylesheet" href="레이아웃 만들기 grid.css">
+        <link rel="stylesheet" href="폰트를 꾸며주는 CSS 속성들.css">
 
     </head>
     <body>
