--- a/HTML CSS 실습/Modal - UI 만들고 CSS로 숨기기.html
+++ b/HTML CSS 실습/Modal - UI 만들고 CSS로 숨기기.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
         <title></title>
-        <link rel="stylesheet" href="Event가 발생했을 때 CSS 변경하기.css">
+        <link rel="stylesheet" href="Modal - UI 만들고 CSS로 숨기기.css">
     </head>
     <body>
         <h1 id="heading">제목입니다.</h1>
